objects/GLM_Activity__c.object
<CustomObject>
    <fields>
        <fullName>Activity_Origin__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <inlineHelpText>Where location (class, trigger, etc.) where the GLM framework was used and the threshold was met.</inlineHelpText>
        <label>Activity Origin</label>
        <length>255</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Calculated_Threshold__c</fullName>
        <formula>(Limit_Used__c /  Limit_Max__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Calculated Threshold %</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Limit_Max__c</fullName>
        <label>Limit Max</label>
        <precision>18</precision>
        <required>true</required>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Limit_Used__c</fullName>
        <label>Limit Used</label>
        <precision>18</precision>
        <required>true</required>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Threshold__c</fullName>
        <description>Used to store the GLM__mdt.Threshold__c value at the time of enter the GLM Activity</description>
        <inlineHelpText>Threshold value that was set on the GLM__mdt.Threshold  field for the given governor limit.</inlineHelpText>
        <label>Threshold %</label>
        <precision>2</precision>
        <required>true</required>
        <scale>0</scale>
        <type>Percent</type>
    </fields>
    <description>Used to store the Governor Limit Monitoring Activity.  This object is used by the GLM class</description>
    <label>GLM Activity</label>
    <nameField>
        <encryptionScheme>None</encryptionScheme>
        <label>Limit Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>GLM Activities</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
    <listViews>
        <fullName>All</fullName>
        <columns>CREATED_DATE</columns>
        <columns>NAME</columns>
        <columns>Activity_Origin__c</columns>
        <columns>Limit_Used__c</columns>
        <columns>Limit_Max__c</columns>
        <columns>Threshold__c</columns>
        <columns>Calculated_Threshold__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
        <sharedTo>
            <group>SystemAdministrators</group>
        </sharedTo>
    </listViews>
</CustomObject>